Updates from Overleaf

--- a/d01-tfhe.tex
+++ b/d01-tfhe.tex
@@ -1141,10 +1141,10 @@ Besides the AND gate, other logic gates can be built in a similar manner, each o
     \centering
   \includegraphics[width=0.8\linewidth]{figures/nn-homomorphic.pdf}
   \caption{An illustration of neural networks's programmable bootstrapping}
-  \label{fig:neural-network}
+  \label{fig:neural-network2}
 \end{figure}
 
-Homomorphic encryption can be applied to the neurons of deep neural networks, in which each neuron is genereally comprised of two steps of computation: 
+Homomorphic encryption can be applied to the neurons of deep neural networks, in which each neuron is generally comprised of two steps of computation: 
 
 \begin{enumerate}
 \item \textbf{Linear Combination of Input Values:} An input feature value (or intermediate value) set $(x_1, x_2, \gap{$\cdots$}, x_n)$, a weight set $(w_1, w_2, \gap{$\cdots x$}, w_n)$, and a bias $b$ are computed as: $y = \sum\limits_{i=1}^{n}a_0w_0 + b$. 
