Updates from Overleaf

--- a/00-main.tex
+++ b/00-main.tex
@@ -17,7 +17,8 @@
 %  contents=Confidential
 %}
 
-
+\usepackage{amsmath,amssymb,amsthm,bm}   % TeX4ht relies on these
+\usepackage{mathtools}            % optional but harmless
 \usepackage{rotating}
 
 \usepackage[margin=1cm, paperwidth=8.5in, paperheight=11in]{geometry}
@@ -32,7 +33,6 @@
 \usepackage{graphicx}
 \usepackage{amsthm}
 \usepackage[utf8]{inputenc}
-\usepackage{bm}
 \usepackage{afterpage}
 \usepackage{adjustbox}
 \usepackage{placeins}
@@ -41,7 +41,6 @@
 \usepackage{titlesec}
 \usepackage{array}
 \usepackage{tabularx}
-\usepackage{amsmath}
 \usepackage{color}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
@@ -75,13 +74,12 @@
 
 \tcbset{breakable}
 \usepackage{esvect}
-\usepackage{amsmath, amsthm, amssymb}
 \usepackage{hyperref}
 \usepackage{mathdots}
 \usepackage{pifont} 
 \usepackage{booktabs}
 \usepackage{arydshln}
-\usepackage{xcolor,amssymb}
+\usepackage{xcolor}
 \def\UrlBreaks{\do\/\do-}
 \usepackage{mathtools}  
 \usepackage{array}
