Compatibility with the older Texlive version

--- a/a05-polynomial-ring.tex
+++ b/a05-polynomial-ring.tex
@@ -10,7 +10,7 @@
 \textbf{A polynomial ring} is a set of polynomials where polynomial computations over the $(+, \cdot)$ operators (e.g., $f_1 + f_2$, $f_1 \cdot (f_2 - f_3)$, $f_1 + f_2 + f_4$) are closed, associative, commutative, and distributive. 
 
 
-A polynomial ring $\bm{\mathbb{Z}_q[x] / (x^n + 1)}$ is a set of all polynomials $f_i$ that have the following properties:
+A polynomial ring ${\mathbb{Z}_q[x] / (x^n + 1)}$ is a set of all polynomials $f_i$ that have the following properties:
 
 \begin{tcolorbox}[title={\textbf{\tboxlabel{\ref*{subsec:poly-ring-overview}} Ring}}]
 
@@ -206,11 +206,11 @@ $ $
 
 The polynomial ring $\mathbb{Z}_8 / (x^4 + 1)$ has the following 4  congruence relationships: 
 
-$\bm{x^4 \equiv -1}$
+$\mathbf{x^4 \equiv -1}$
 
 $x^4 \cdot x^{-1} \equiv -1 \cdot x^{-1}$
 
-$\bm{x^3 \equiv -x^{-1}}$
+$\mathbf{x^3 \equiv -x^{-1}}$
 
 $ $
 
@@ -218,7 +218,7 @@ $x^4 \equiv -1$
 
 $x^4 \cdot x^{-3} \equiv -1 \cdot x^{-3}$
 
-$\bm{x \equiv -x^{-3}}$
+$\mathbf{x \equiv -x^{-3}}$
 
 $ $
 
@@ -226,7 +226,7 @@ $x^4 \equiv -1$
 
 $x^4 \cdot x^{-2} \equiv -1 \cdot x^{-2}$
 
-$\bm{x^2 \equiv -x^{-2}}$
+$\mathbf{x^2 \equiv -x^{-2}}$
 
 $ $
 
@@ -253,4 +253,3 @@ $= -1 - 2x - 3x^2 + 4x^3$
 $= -1 - 2x - 3x^2 + (4 \equiv -4 \bmod 8) x^3$
 
 $\equiv -1 - 2x - 3x^2 -4x^3$
-
