--- a/a07-roots-of-unity.tex
+++ b/a07-roots-of-unity.tex
@@ -7,7 +7,7 @@
 \begin{tcolorbox}[title={\textbf{\tboxdef{\ref*{subsec:roots-def}} Definitions for Roots of Unity}}]
 \begin{itemize}
 \item \textbf{$\bm{n}$-th root of Unity:} A complex number $\zeta$ that satisfies the equation $\zeta^n = 1$
-\item \textbf{Primitive $\bm{n}$-th Root of Unity:} Any $n$-th root of unity $\zeta$ such that $\textsf{ord}_\mathbb{C}(\zeta) = n$. We denote $P(n)$ as a set of primitive $n$-th root of unity. 
+\item \textbf{Primitive $\bm{n}$-th Root of Unity:} Any $n$-th root of unity $\zeta$ such that $\textsf{ord}_{\mathbb{C}}(\zeta) = n$. We denote $P(n)$ as a set of primitive $n$-th root of unity. 
 \end{itemize}
 
 $ $
@@ -48,13 +48,13 @@ $ $
 
 
 \begin{tcolorbox}[title={\textbf{\tboxtheorem{\ref*{subsec:roots-theorem}.2} Order of the Root of Unity}}]
-Given $\zeta \in \mathbb{C}$ (the complex number domain) and $\zeta^n = 1$ where $n \geq 1$, $\zeta$ is an $n$-th root of unity if and only if $\textsf{ord}_\mathbb{C}(\zeta) \text{ } | \text{ } n$.
+Given $\zeta \in \mathbb{C}$ (the complex number domain) and $\zeta^n = 1$ where $n \geq 1$, $\zeta$ is an $n$-th root of unity if and only if $\textsf{ord}_{\mathbb{C}}(\zeta) \text{ } | \text{ } n$.
 \end{tcolorbox}
 \begin{proof}
     We use 
     Theorem~\ref*{subsec:order-theorem}.1:
     \begin{enumerate}
-    \item \textit{Forward Proof:} Since $\textsf{ord}_\mathbb{C}(\zeta)=k$ is the smallest integer such that $\zeta^k = 1$, for any $n$ that satisfies $\zeta^n = 1$, $n$ must be a multiple of $k$. This means that $k \gap{$|$} n$.
+    \item \textit{Forward Proof:} Since $\textsf{ord}_{\mathbb{C}}(\zeta)=k$ is the smallest integer such that $\zeta^k = 1$, for any $n$ that satisfies $\zeta^n = 1$, $n$ must be a multiple of $k$. This means that $k \gap{$|$} n$.
     \item \textit{Backward Proof:} If $k \gap{$|$} n$, then $n$ is a multiple of $k$, which means that $\zeta^n = 1$. 
     \end{enumerate}
     %$(Here, note that our \b\bmodulo computation wraps around a circle of Euler's formula on the complex plane instead of a finite integer field).
@@ -66,9 +66,9 @@ The set of all $n$-th roots of unity is the union $\bigcup_{d|n} P(d)$ (i.e., th
 \begin{myproof}
     \begin{enumerate}
     \item Let $\omega = e^{2\pi i/n}$.
-    Given $\zeta^n = 1$, for each $n$-th root of unity $\zeta$ is, $\zeta = \omega^{k_i}$ for $k_i = \{0, 1, \cdots, n-1\}$. Note that according to Theorem~\ref*{subsec:order-theorem}.1, $(\omega^{k_i})^n = 1$ if and only if $\textsf{ord}_\mathbb{C}(\omega^{k_i}) \text{ } | \text{ } n$. 
-    \item Let $\textsf{ord}_\mathbb{C}(\omega^{k_i}) = d_i$. Then, $(\omega^{k_i})^{d_i} = 1$. Combining these two facts, each $n$-th root of unity $\omega^{k_i}$ is also a primary $d_i$-th root of unity (i.e., a solution for $\zeta^{d_i} = 1$), that is, $\omega^{k_i} \in P(d_i)$. 
-    \item Remember that for each $\textsf{ord}_\mathbb{F}(\omega^{k_i}) = d_i$, $d_i \text{ } | \text{ } n$. For every $d_i$ that divides $n$, all the (primary) $d_i$-th roots of unity are also the $n$-th root of unity. This is because the (primary) $d_i$-th root of unity that satisfies $\zeta^{d_i} = 1$ also satisfies $\zeta^{n} = 1$ (as $n$ is a multiple of $d_i$).
+    Given $\zeta^n = 1$, for each $n$-th root of unity $\zeta$ is, $\zeta = \omega^{k_i}$ for $k_i = \{0, 1, \cdots, n-1\}$. Note that according to Theorem~\ref*{subsec:order-theorem}.1, $(\omega^{k_i})^n = 1$ if and only if $\textsf{ord}_{\mathbb{C}}(\omega^{k_i}) \text{ } | \text{ } n$. 
+    \item Let $\textsf{ord}_{\mathbb{C}}(\omega^{k_i}) = d_i$. Then, $(\omega^{k_i})^{d_i} = 1$. Combining these two facts, each $n$-th root of unity $\omega^{k_i}$ is also a primary $d_i$-th root of unity (i.e., a solution for $\zeta^{d_i} = 1$), that is, $\omega^{k_i} \in P(d_i)$. 
+    \item Remember that for each $\textsf{ord}_{\mathbb{F}}(\omega^{k_i}) = d_i$, $d_i \text{ } | \text{ } n$. For every $d_i$ that divides $n$, all the (primary) $d_i$-th roots of unity are also the $n$-th root of unity. This is because the (primary) $d_i$-th root of unity that satisfies $\zeta^{d_i} = 1$ also satisfies $\zeta^{n} = 1$ (as $n$ is a multiple of $d_i$).
     \item Step 2 concludes that each $n$-th root of unity is a primitive $d_i$-th root of unity for some $d_i$ that divides $n$. Step 3 concludes that each $d_i$-th root of unity, where $d_i$ divides $n$, is also the $n$-th root of unity. Combining these two conclusions, the set of all primitive $n$-th root of unity is equivalent to the union of all primary $d_i$-th roots of unity where $d_i$ divides $n$ (i.e., $\bigcup_{d|n} P(d)$). 
     \end{enumerate}
 \end{myproof}
@@ -78,9 +78,9 @@ Given an $n$-th root of unity $\zeta = \omega^k$ for $k = \{0, 1, \cdots, n-1\}$
 \end{tcolorbox}
 \begin{myproof}
     \begin{enumerate}
-    \item Note that $\zeta^n = 1$ and $\zeta = \omega$ for $k = 1$. Thus, $\textsf{ord}_\mathbb{C}(\omega) = n$.
-    \item Theorem~\ref*{subsec:order-theorem}.2 states that if $ord_\mathbb{F}(a) = k$, then for any $n \geq 1$, $ord_\mathbb{F}(a^n) = \dfrac{k}{\text{gcd}(k,n)}$. Similarly, if $\textsf{ord}_\mathbb{C}(\omega) = n$, then for any $k \geq 1$, $\textsf{ord}_\mathbb{C}(\omega^k) = \dfrac{n}{\text{gcd}(k, n)}$.
-    \item Step 2 implies that $\textsf{ord}_\mathbb{C}(\omega^k) = n$ (i.e., $\omega^k$ is a primitive $n$-th root of unity) if and only if $\text{gcd}(k, n) = 1$.
+    \item Note that $\zeta^n = 1$ and $\zeta = \omega$ for $k = 1$. Thus, $\textsf{ord}_{\mathbb{C}}(\omega) = n$.
+    \item Theorem~\ref*{subsec:order-theorem}.2 states that if $ord_{\mathbb{F}}(a) = k$, then for any $n \geq 1$, $ord_{\mathbb{F}}(a^n) = \dfrac{k}{\text{gcd}(k,n)}$. Similarly, if $\textsf{ord}_{\mathbb{C}}(\omega) = n$, then for any $k \geq 1$, $\textsf{ord}_{\mathbb{C}}(\omega^k) = \dfrac{n}{\text{gcd}(k, n)}$.
+    \item Step 2 implies that $\textsf{ord}_{\mathbb{C}}(\omega^k) = n$ (i.e., $\omega^k$ is a primitive $n$-th root of unity) if and only if $\text{gcd}(k, n) = 1$.
     \end{enumerate}
 \end{myproof}
 
@@ -92,9 +92,9 @@ The number of primitive $n$-th roots of unity is $\phi(n)$ (i.e., the number of 
 $ $
 \begin{enumerate}
 \item Given $\zeta^n = 1$, the roots of unity are $\zeta = \omega^k$ where $\omega = e^{2\pi i/n}$ and $k = \{0, 1, \cdots, n-1\}$ 
-\item By definition, $\omega^k$ is a primitive $n$-th root of unity if and only if $\textsf{ord}_\mathbb{C}(\omega^k) = n$. 
-\item $\omega$ is a primitive $n$-th root of unity, because $\textsf{ord}_C(\omega) = n$. 
-\item According to Theorem~\ref*{subsec:order-theorem}.2, if $\textsf{ord}_\mathbb{C}(\omega) = n$, then $\textsf{ord}_\mathbb{C}(\omega^k) = \dfrac{n}{\text{gcd}(k,n)}$. Therefore, in order for $\textsf{ord}_\mathbb{C}(\omega^k) = n$, $\text{gcd}(k,n)$ has to be 1. In other words, $k$ and $n$ have to be co-prime.
-The total number of such co-primes between $n$ and $k = \{1, 2, \cdots, n-1\}$ (excluding 0 because $\text{gcd}(0, n)= n$ and also $\textsf{ord}_\mathbb{C}(\omega^0) = \textsf{ord}_\mathbb{C}(1) = 1 \neq n$) is $\phi(n)$, which corresponds to the total number of the primitive $n$-the root of unity.
+\item By definition, $\omega^k$ is a primitive $n$-th root of unity if and only if $\textsf{ord}_{\mathbb{C}}(\omega^k) = n$. 
+\item $\omega$ is a primitive $n$-th root of unity, because $\textsf{ord}_{\mathbb{C}}(\omega) = n$. 
+\item According to Theorem~\ref*{subsec:order-theorem}.2, if $\textsf{ord}_{\mathbb{C}}(\omega) = n$, then $\textsf{ord}_{\mathbb{C}}(\omega^k) = \dfrac{n}{\text{gcd}(k,n)}$. Therefore, in order for $\textsf{ord}_{\mathbb{C}}(\omega^k) = n$, $\text{gcd}(k,n)$ has to be 1. In other words, $k$ and $n$ have to be co-prime.
+The total number of such co-primes between $n$ and $k = \{1, 2, \cdots, n-1\}$ (excluding 0 because $\text{gcd}(0, n)= n$ and also $\textsf{ord}_{\mathbb{C}}(\omega^0) = \textsf{ord}_{\mathbb{C}}(1) = 1 \neq n$) is $\phi(n)$, which corresponds to the total number of the primitive $n$-the root of unity.
 \end{enumerate}
 \end{proof}
