--- a/a08-cyclotomic-polynomial.tex
+++ b/a08-cyclotomic-polynomial.tex
@@ -85,7 +85,7 @@ If $k \gap{$|$} n$, then $\Phi_{nk}(x) = \Phi_n(x^k)$.
 \end{tcolorbox}
 \begin{myproof}
 \begin{enumerate}
-    \item Theorem~\ref*{subsec:order-theorem}.3 states that given $k \gap{$|$} n$, $\text{ord}_\mathbb{F}(a) = kn$ if and only if $\text{ord}_\mathbb{F}(a^k) = n$. This means that for $\zeta \in \mathbb{C}$, $\text{ord}_\mathbb{C}(\zeta) = nk$ if and only if $\text{ord}_\mathbb{C}(\zeta^k) = n$. In other words, $\zeta$ is a primitive $nk$-th root of unity if and only if $\zeta^k$ is the primitive $n$-th root of unity. This implies that $\zeta$ is a root of $\Phi_{nk}(x)$ if and only if $\zeta^k$ is a root of $\Phi_{n}(x)$. 
+    \item Theorem~\ref*{subsec:order-theorem}.3 states that given $k \gap{$|$} n$, $\text{ord}_{\mathbb{F}}(a) = kn$ if and only if $\text{ord}_{\mathbb{F}}(a^k) = n$. This means that for $\zeta \in \mathbb{C}$, $\text{ord}_{\mathbb{C}}(\zeta) = nk$ if and only if $\text{ord}_{\mathbb{C}}(\zeta^k) = n$. In other words, $\zeta$ is a primitive $nk$-th root of unity if and only if $\zeta^k$ is the primitive $n$-th root of unity. This implies that $\zeta$ is a root of $\Phi_{nk}(x)$ if and only if $\zeta^k$ is a root of $\Phi_{n}(x)$. 
     \item Let $\Phi_{nk}(x) = (x - \zeta_1)(x - \zeta_2)...(x - \zeta_p)$, where $P(n)$ has $p$ primitive $nk$-th roots of unity.
     \item $\Phi_{n}(x) = (x - \zeta_1^k)(x - \zeta_2^k)...(x - \zeta_p^k)$. Note that $P(n)$ should also have $p$ primitive $n$-th roots of unity, because elements of $P(nk)$ are isomorphic to the elements of $P(n)$ (as they preserved if and only if relationships in step 2). Now, it's also true that $\Phi_{n}(y) = (y - \zeta_1^k)(y - \zeta_2^k)...(y - \zeta_p^k)$, where $y = x^k$. In this case, $x = \{\zeta_1, \zeta_2, ... \zeta_p\}$.
     \item $\Phi_{nk}(x)$ and $\Phi_{n}(y) = \Phi_{n}(x^k)$ have the same roots with the same coefficients. Therefore, $\Phi_{nk}(x) = \Phi_{n}(y) = \Phi_{n}(x^k)$. 
