--- a/a11-cyclotomic-polynomial-integer-ring.tex
+++ b/a11-cyclotomic-polynomial-integer-ring.tex
@@ -25,7 +25,7 @@ In this section, we will explain the $\mu$-th cyclotomic polynomial over $X \in 
 \begin{table}[h] %usepackage{array} 
 \begin{tabular}{|>{\centering\arraybackslash}p{0.1\columnwidth}||>{\centering\arraybackslash}p{0.4\columnwidth}||>{\centering\arraybackslash}p{0.4\columnwidth}|}
 \hline \hline
-& \textbf{Polynomial over $\bm{X \in \mathbb{C}}$} & \textbf{Polynomial over $\bm{X \in \mathbb{Z}_p}$} \\ 
+& \textbf{Polynomial over $\bm{X} \bm{\in} \bm{\mathbb{C}}$} & \textbf{Polynomial over $\bm{X} \in \bm{\mathbb{Z}}_{\bm{p}}$} \\ 
 & \textbf{(Complex Number)} & \textbf{(Integer Ring)} \\ \hline \hline
 \textbf{Definition of the $\bm \mu$-th Root of Unity}& All $X \in \mathbb{C}$ such that $X^\mu = 1$, (which are computed as $X = e^{2 \pi i k / \mu}$ for integer $k$ where $0 \leq k \leq \mu - 1$)& All $X \in \mathbb{Z}_p$ such that $X^\mu \equiv 1 \bmod p$\\ \hline
 \textbf{Definition of the Primitive $\bm \mu$-th Root of Unity}& Those $\mu$-th roots of unity $\omega$ such that $\omega^{\mu} = 1$, and $\omega^{\frac{\mu}{2}} \neq 1$ &  Those $\mu$-th roots of unity $\omega$ such that $\omega^{\mu} \equiv 1 \bmod p$, and $\omega^{\frac{\mu}{2}} \not\equiv 1 \bmod p$ \\ \hline
