--- a/b04-glwe.tex
+++ b/b04-glwe.tex
@@ -201,7 +201,7 @@ $\Bigl\lceil \dfrac{ \Delta  M + E_{\mathit{all}} }{\Delta}\Bigl\rfloor = M  \te
 
 \end{enumerate}
 
-For correct decryption, every noise coefficient $e_i$ of polynomial $E_\mathit{all}$ should be: $e_i < \dfrac{\Delta}{2}$.
+For correct decryption, every noise coefficient $e_i$ of polynomial $E_{\mathit{all}}$ should be: $e_i < \dfrac{\Delta}{2}$.
 
 \end{tcolorbox}
 
