Updates from Overleaf

--- a/00-main.tex
+++ b/00-main.tex
@@ -161,6 +161,9 @@
 \renewcommand{\subsubsectionautorefname}{\S\@gobble}
 \renewcommand{\appendixautorefname}{\S\@gobble}
 \renewcommand{\appendixautorefname}{\S\@gobble}
+
+\newcommand\mymathcolor[2]{{\color{#1}#2}}
+
 \makeatother
 \newcommand{\ignore}[1]{}
 
@@ -389,6 +392,15 @@ This chapter explains the basic mathematical components of the Number theory: gr
 \section{Decomposition}
 \label{sec:decomp}
 \input{a06-decomp}
+
+
+\clearpage
+
+\section{Roots of Unity}
+\label{sec:roots}
+\input{a07-roots-of-unity}
+
+\clearpage
 
 
 
